# samples

./: .gitignore  Makefile  README.md  config.yaml  config.yaml.sample  pyproject.toml
audits/: assert_positive_num_orders.sql
contracts/: README.md
contracts/dcspec/: order_event.yml
contracts/odcs/: order_event.yml
data/schemas/duckdb/: table_order_event.sql
data/schemas/postgres/: table_order_event.sql
data/snapshots/2025-04-14/: load.sql  schema.sql  sqlmesh__sqlmesh_sqlmesh__full_order_event_model___________.csv  sqlmesh__sqlmesh_sqlmesh__seed_order_event_model____________.csv
models/: full_data_product_model.sql  full_order_event_model.sql  incremental_data_product_model.sql  incremental_order_event_model.sql  seed_data_contract_model.sql  seed_data_product_model.sql  seed_order_event_model.sql  seed_port_model.sql
seeds/: seed_data_contract_data.csv  seed_data_product_data.csv  seed_port_data.csv
tests/: test_full_model.yaml
tools/: ddl-transpile-to-postgres.py
